# python-starter

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Makefile  build.spec  main.py  pyproject.toml  requirements.txt
.config/: .mypy.ini  .pre-commit-config.yaml  .pylintrc  pre-commit.yaml  requirements.txt
.github/: pre-commit.yaml
app/: __init__.py  _constants.py  main.py  utils.py
